# sgtdv-path_tracking

./: CMakeLists.txt  README.md  package.xml
include/: messages.h  path_tracking.h  path_tracking_ros.h  path_tracking_synch.h  speed_control.h  steering_control.h  tracking_algorithms.h
launch/: path_tracking.launch  path_tracking_rc.launch  path_tracking_sim.launch
matlab_tools/: control_matlab_visualization.slx
params/: path_tracking.yaml  path_tracking_rc.yaml  path_tracking_sim.yaml
src/: path_tracking.cpp  path_tracking_node.cpp  path_tracking_ros.cpp  path_tracking_synch.cpp  speed_control.cpp  steering_control.cpp  tracking_algorithms.cpp
