<?xml version="1.0"?>
<package format="2">
  <name>path_tracking</name>
  <version>0.0.0</version>
  <description>The path_tracking package</description>

  <maintainer email="ligazetom@todo.todo">ligazetom</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sgtdv_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
</package>
